# jq-repl

./: .gitignore  .python-version  pyproject.toml  setup.py
jq_repl/: main.py
