[tool.poetry]
name = "jq-repl"
version = "0.1.0"
description = ""
authors = ["Paweł Sacawa <pawelsacawa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
prompt-toolkit = "^3.0.18"
Pygments = "^2.9.0"
jq = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = [ "poetry-core>=1.0.0", "setuptools" ]
build-backend = "poetry.core.masonry.api"
